--- a/index.html
+++ b/index.html
@@ -3,12 +3,34 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<link rel="stylesheet" href="css/reset.css" />
-	<link rel="stylesheet" href="css/fonts.css" />
 	<link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
 
+<header>
+	<div class="container">
+		<ul class="social-icon">
+			<li><a href="#"><i class="sprite social-icon__dribble"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__twitter"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__behance"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__vimeo"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__pinterest"></i></a></li>
+		</ul>
+		<div class="logo">
+			<a href="#"><img src="img/logo.png" alt="logo"></a>
+		</div>
+		
+		<nav>
+			<i class="hamburger"></i>
+			<!-- <ul class="nav-ul">
+				<li><a href="#">Main page</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Forum</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul> -->
+		</nav>
+	</div>
+</header>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/script.js" type="text/javascript"></script>	
