--- a/index.html
+++ b/index.html
@@ -38,27 +38,180 @@
 	<div class="container">
 		<ul class="picture-ul">
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
+				
 				<img src="img/img1.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img2.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img3.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img4.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img5.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img6.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img7.jpg" alt="" />
 			</li>
 			<li>
+				<!-- popup info about picture -->
+				<div class="pic-info">
+					<p class="picture__text">
+						<span class="picture__info--title">Awesome Day</span>
+						<span class="picture__info--descr">View from above</span>
+					</p>
+					<p class="picture__date">
+						<span class="picture__info--title">25</span>
+						<span class="picture__info--descr">Jan</span>
+					</p>
+				</div>
+
+				<!-- popup white footer -->
+				<div class="pic-footer">
+					<ul>
+						<li><i class="sprite icon--like"></i>37</li>
+						<li><i class="sprite icon--comment"></i>14</li>
+					</ul>
+				</div>
 				<img src="img/img8.jpg" alt="" />
 			</li>
 		</ul>
@@ -135,16 +288,16 @@
 			<h4>Category</h4>
 			<ul class="aside-ul">
 				<li>
-					<span><i class="sprite aside-ul__icon--close"></i>Traveling</span>
+					<span class="active"><i class="sprite aside-ul__icon--close"></i>Traveling</span>
 					<ul class="dropdown-ul">
 						<li><a href="">item menu 1</a></li>
 						<li><a href="">item menu 2</a></li>
 					</ul>
 				</li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">Photos</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">Lifestyle</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">Inspiration</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">Fasion</a></li>
+				<li><a href="#">Photos</a></li>
+				<li><a href="#">Lifestyle</a></li>
+				<li><a href="#">Inspiration</a></li>
+				<li><a href="#">Fasion</a></li>
 			</ul>
 		</div>
 
@@ -159,13 +312,13 @@
 						<li><a href="">item menu 2</a></li>
 					</ul>
 				</li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">January</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">February</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">March</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">April</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">May</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">June</a></li>
-				<li><i class="sprite aside-ul__icon--close"></i><a href="#">July</a></li>
+				<li><a href="#">January</a></li>
+				<li><a href="#">February</a></li>
+				<li><a href="#">March</a></li>
+				<li><a href="#">April</a></li>
+				<li><a href="#">May</a></li>
+				<li><a href="#">June</a></li>
+				<li><a href="#">July</a></li>
 			</ul>
 		</div>
 		
@@ -180,18 +333,67 @@
 			<p class="main2__descr">Mom hammer creepy me gusta morbi eat le friend steve jobs cellphone clinton cereal guy. </p>
 
 			<form class="form" action="">
-				<input type="text" placeholder="Your name" name="name" />
-				<input type="text" placeholder="Your Email address" name="address" />
+				<input type="text" class="input" placeholder="Your name" name="name" />
+				<input type="text" class="input" placeholder="Your Email address" name="address" />
 				<textarea name="input_msg" id="msg" cols="30" rows="10"></textarea>	
 				<button type="submit" class="btn-enter">Send E-mail</button>
 			</form>
 		</div>
 		<!-- right -->
 		<div class="main-2__right">
-			
+
+			<div class="random">
+				<!-- 1 -->
+				<div class="item-block">
+					<h3>Random Post</h3>
+					<img src="img/img3.jpg" alt="" />
+					<p class="item-block__descr">Some advise on Photography</p>
+				</div>
+				<!-- 2 -->
+				<div class="item-block">
+					<h3>Random Post</h3>
+					<img src="img/img3.jpg" alt="" />
+					<p class="item-block__descr">Some advise on Photography</p>
+				</div>
+			</div>
+
+			<!-- Newsletter -->
+			<div class="block-newsletter">
+				<img class="main-2__logo" src="img/logo.png" alt="" />
+				<h3>Newsletter</h3>
+				<input type="text" class="input" placeholder="Your E-mail address" />
+				<a class="btn-enter" href="#">Subscribe</a>
+			</div>
 		</div>
 	</div>
 </section>
+
+<!-- footer -->
+<!-- header -->
+<footer>
+	<div class="container">
+		<ul class="social-icon">
+			<li><a href="#"><i class="sprite social-icon__dribble"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__twitter"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__behance"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__vimeo"></i></a></li>
+			<li><a href="#"><i class="sprite social-icon__pinterest"></i></a></li>
+		</ul>
+		<div class="logo">
+			<a href="#"><img src="img/logo-white.png" alt="logo"></a>
+		</div>
+		
+		<nav>
+			<i class="hamburger"></i>
+			<!-- <ul class="nav-ul">
+				<li><a href="#">Main page</a></li>
+				<li><a href="#">About</a></li>
+				<li><a href="#">Forum</a></li>
+				<li><a href="#">Contact</a></li>
+			</ul> -->
+		</nav>
+	</div>
+</footer>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <script src="js/script.js" type="text/javascript"></script>	
