--- a/index.html
+++ b/index.html
@@ -20,21 +20,22 @@
 		<div class="logo">
 			<a href="#"><img src="img/logo.png" alt="logo"></a>
 		</div>
-		
-		<nav>
-			<i class="hamburger"></i>
-			<!-- <ul class="nav-ul">
-				<li><a href="#">Main page</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul> -->
-		</nav>
+		<i class="hamburger active"></i>
 	</div>
 </header>
 
+<!-- navigation -->
+<nav class="nav">
+	<ul class="nav-ul">
+		<li><a href="#">Main page</a></li>
+		<li><a href="#">About</a></li>
+		<li><a href="#">Forum</a></li>
+		<li><a href="#">Contact</a></li>
+	</ul>
+</nav>
+
 <!-- picture -->
-<section class="picture">
+<div class="picture">
 	<div class="container">
 		<ul class="picture-ul">
 			<li>
@@ -216,7 +217,7 @@
 			</li>
 		</ul>
 	</div>
-</section>
+</div>
 
 <!-- article -->
 <section class="article">
@@ -332,7 +333,7 @@
 			<h3>Contact</h3>
 			<p class="main2__descr">Mom hammer creepy me gusta morbi eat le friend steve jobs cellphone clinton cereal guy. </p>
 
-			<form class="form" action="">
+			<form class="form">
 				<input type="text" class="input" placeholder="Your name" name="name" />
 				<input type="text" class="input" placeholder="Your Email address" name="address" />
 				<textarea name="input_msg" id="msg" cols="30" rows="10"></textarea>	
@@ -384,13 +385,7 @@
 		</div>
 		
 		<nav>
-			<i class="hamburger"></i>
-			<!-- <ul class="nav-ul">
-				<li><a href="#">Main page</a></li>
-				<li><a href="#">About</a></li>
-				<li><a href="#">Forum</a></li>
-				<li><a href="#">Contact</a></li>
-			</ul> -->
+			<i class="hamburger active"></i>
 		</nav>
 	</div>
 </footer>
