--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <!-- navigation -->
 <nav class="nav">
 	<ul class="nav-ul">
-		<li><a href="#">Main page</a></li>
+		<li><a href="#">Homepage</a></li>
 		<li><a href="#">About</a></li>
 		<li><a href="#">Forum</a></li>
 		<li><a href="#">Contact</a></li>
